Fix overflow bug and clean up main page

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,7 @@
 
 html {
 	background-color: black;
+	overflow-x: hidden;
 }
 body {
 	width: 100vw;
